<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What Song Is It Anyway?</string>
    <string name="action_settings">Settings</string>
    <string name="title">What Song Is It Anyway?</string>
    <string name="pauseButton">Pause</string>
    <string name="skipButton">Play/Skip</string>
    <string name="timer">0:00</string>
    <string name="streak">Streak: 0</string>
    <string name="multiplier">Multiplier: 1</string>
    <string name="score">Score: 0</string>
    <string name="submit">Description for the submit button</string>
    <string name="mainMenuTitle">What song is it anyway?</string>
    <string name="mainMenuPlayDesc">Button to play a game</string>
    <string name="mainMenuChooseDesc">Button to choose a playlist</string>
    <string name="mainMenuHighDesc">Button to go to the high scores page</string>
    <string name="gameScoreTitle">Your\n     Score:</string>
    <string name="gameScoreScore">0</string>
    <string name="gameScoreMessage">Nice Try!</string>
    <string name="statsButton">This is the button used to the statistics screen</string>
    <string name="highScoreButton">This is the button used to get to the high score screen</string>
    <string name="statsVertBar">This is a vertical separator</string>
    <string name="statsMainTitle">You Got:</string>
    <string name="stats1Label">Accuracy:</string>
    <string name="stats1Label2">%</string>
    <string name="stats1Val">0</string>
    <string name="stats2Label">Avg. Guess:</string>
    <string name="stats2Label2">sec.</string>
    <string name="stats2Val">0</string>
    <string name="stats3Label">Games Played:</string>
    <string name="stats3Val">0</string>
    <string name="stats4Label">Songs Played:</string>
    <string name="stats4Val">0</string>
    <string name="stats5Label">Most Guessed:</string>
    <string name="stats5Val">None</string>
    <string name="mainMenuButton">This button takes you to the main menu</string>
    <string name="high1">Highest score</string>
    <string name="high1Val">0</string>
    <string name="high2">Second-highest score</string>
    <string name="high2Val">0</string>
    <string name="high3">Third-highest score</string>
    <string name="high3Val">0</string>
    <string name="high4">Fourth-highest score</string>
    <string name="high4Val">0</string>
    <string name="high5">Fifth-highest score</string>
    <string name="high5Val">0</string>
    <string name="giveUpButton">Give up the game and quit</string>
    <string name="resumeButton">Resume</string>
    <string name="settingsTitle">Settings</string>
    <string name="settingsGameDuration">Game\nDuration:</string>
    <string name="settingsColon">:</string>
    <string name="settingsSongDuration">Song\nDuration:\n(sec.)</string>
    <string name="settingsSaveButton">Button used to save current settings</string>
    <string name="introMessage">Enter the name of the song you hear. Spelling and punctuation don\'t count!</string>
    <string name="playActivityCategory">Play Activity Category</string>
    <string name="settingsActivityCategory">Settings Activity Category</string>
    <string name="loadingLabel">Loading</string>
    <string name="loadingMessage">Charging the flux capacitor&#8230;</string>

</resources>
