<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".PlayActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:maxLines="2"
        android:text="@string/title"
        android:textSize="20sp"
        android:typeface="normal" />

    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="0dp"
        tools:context=".PlayActivity" >

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/streakMultiplier"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pauseButton"
            android:onClick="pause"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pause" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/streakMultiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:layout_centerHorizontal="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/streak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="thin"
                android:text="@string/streak"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="thin"
                android:paddingLeft="5dp"
                android:text="@string/multiplier"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/streakMultiplier"
            android:layout_centerHorizontal="true"
            android:text="@string/score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/streakMultiplier"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/skipButton"
            android:onClick="skip"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/skip" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/scoreBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/controls"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="22dp"
        android:minHeight="5dp"
        android:progressDrawable="@drawable/progress_bar" />

    <LinearLayout
        android:id="@+id/dataEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreBar"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/songTextbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:background="@drawable/enter_text"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/submit"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:onClick="submit"
            android:scaleType="fitCenter"
            android:src="@drawable/submit" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/resumeOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80222222" >

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="132dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/resumeButton"
            android:onClick="resume"
            android:scaleType="fitCenter"
            android:src="@drawable/resume" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/playGiveUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/giveUpButton"
        android:maxWidth="200dp"
        android:onClick="giveUp"
        android:scaleType="fitCenter"
        android:src="@drawable/give_up" />

</RelativeLayout>