<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/gameScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@+string/gameScoreTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/gameScoreScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameScoreTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/gameScoreScore"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gameScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameScoreScore"
        android:layout_centerHorizontal="true"
        android:text="@string/gameScoreMessage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/gameScoreStatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameScoreReplayButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/statsButton"
        android:maxHeight="60dp"
        android:onClick="statsButton"
        android:scaleType="fitCenter"
        android:src="@drawable/to_stats" />

    <ImageButton
        android:id="@+id/gameScoreReplayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameScoreText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/highScoreButton"
        android:maxHeight="80dp"
        android:onClick="playAgainButton"
        android:scaleType="fitCenter"
        android:src="@drawable/to_replay" />

    <ImageButton
        android:id="@+id/gameScoreMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameScoreStatsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/mainMenuButton"
        android:maxHeight="60dp"
        android:onClick="mainMenuButton"
        android:scaleType="fitCenter"
        android:src="@drawable/to_menu" />

</RelativeLayout>