<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:text="@string/title"
        android:textSize="20sp" />
    
    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        tools:context=".MainActivity" >

		    <Button
		        android:id="@+id/pauseButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="false"
		        android:layout_alignParentLeft="true"
		        android:layout_toLeftOf="@+id/streakMultiplier"
		        android:height="@dimen/activity_vertical_margin"
		        android:onClick="pause"
		        android:text="@string/pauseButton" />
		    
		    <Button
		        android:id="@+id/skipButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_toRightOf="@+id/streakMultiplier"
		        android:onClick="skip"
		        android:text="@string/skipButton" />

		    <TextView
		        android:id="@+id/timer"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:text="@string/timerText"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <LinearLayout
		        android:id="@+id/streakMultiplier"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/timer"
		        android:layout_centerHorizontal="true" >

		        <TextView
		            android:id="@+id/streakLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Streak:"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

		        <TextView
		            android:id="@+id/streak"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/streak"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

		        <TextView
		            android:id="@+id/multiplierLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="5dp"
		            android:text="Multiplier:"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

		        <TextView
		            android:id="@+id/multiplier"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/multiplier"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

		    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
