<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:maxLines="2"
        android:text="@string/title"
        android:textSize="20sp"
        android:typeface="normal" />

    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:paddingTop="0dp"
        tools:context=".PlayActivity" >

        <ImageView
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/streakMultiplier"
            android:adjustViewBounds="false"
            android:contentDescription="@string/pauseButton"
            android:cropToPadding="false"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:src="@android:drawable/ic_media_pause" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/streakMultiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/streak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <ImageView
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/streakMultiplier"
            android:contentDescription="@string/skipButton"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:src="@android:drawable/ic_media_next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/controls"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/scoreBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <LinearLayout
        android:id="@+id/dataEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreBar"
        android:layout_centerHorizontal="true" >
        
        <EditText
            android:id="@+id/songTextbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:ems="10" >
        </EditText>

        <ImageView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/submit"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/playGiveUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dataEntry"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/giveUpButton"
        android:maxWidth="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/give_up" />
    
    
    <!-- Translucent pause overlay -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88666666" >

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="132dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/resumeButton"
            android:cropToPadding="false"
            android:onClick="resume"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_media_play" />

    </RelativeLayout>
    

</RelativeLayout>
